deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: playground
spec:
  replicas: 1
  selector:
    matchLabels:
      app: playground
  template:
    metadata:
      labels:
        app: playground
    spec:
      containers:
      - name: playground
        image: wil42/playground:v2 # Change ce tag pour v2 lors de la mise à jour
        ports:
        - containerPort: 8888
