ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "false"
spec:
  rules:
    - host: application.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: playground-service
                port:
                  number: 8888
